feat: save all adjusted jvg files